--- a/templates/dashboard.tmpl
+++ b/templates/dashboard.tmpl
@@ -251,7 +251,7 @@
 
       <div class="panel panel-primary" id="volume-fees-panel">
           <div class="panel-body">
-          <button class="btn btn-warning btn-block" id="startTracking" title="Click to start tracking all the users in realtime. There current positions will update here.">Track</button>
+          <button class="btn btn-warning btn-block" id="startTracking" title="Click to start tracking all the users in realtime. Their current positions will update here.">Track</button>
           </div>
       </div>
 
@@ -292,7 +292,7 @@
 
       <div class="panel panel-primary" id="volume-fees-panel">
           <div class="panel-body">
-          <button type="submit" class="btn btn-info btn-block" id="recalculateAll" title="Reclaculate the machine learning parameters and update your statistics.">Update</button>
+          <button type="submit" class="btn btn-info btn-block" id="recalculateAll" title="Recalculate the machine learning parameters and update your statistics.">Update</button>
           </div>
       </div>
 
